fix(webui): improve spacing between coalition table header and table

--- a/webui/css/config/settings/form.css
+++ b/webui/css/config/settings/form.css
@@ -27,10 +27,6 @@
     margin-bottom: 5px
 }
 
-.empty-list-style > summary {
-    list-style-type: '';
-}
-
 .pointer-cursor {
     cursor: pointer
 }
